<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.4.0</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>com.zentra.middleware</groupId>
    <artifactId>zentra-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>zentra-parent</name>
    <description>Zentra SIFEN Middleware - Monolito Modular</description>
    <packaging>pom</packaging>

    <modules>
        <module>modulo-core</module>
        <module>modulo-crypto</module>
        <module>modulo-xml</module>
        <module>modulo-sifen</module>
        <module>modulo-kude</module>
        <module>modulo-api</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <apache.santuario.version>3.0.3</apache.santuario.version>
        <jaxb.version>4.0.2</jaxb.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.santuario</groupId>
                <artifactId>xmlsec</artifactId>
                <version>${apache.santuario.version}</version>
            </dependency>
            <dependency>
                <groupId>jakarta.xml.bind</groupId>
                <artifactId>jakarta.xml.bind-api</artifactId>
                <version>${jaxb.version}</version>
            </dependency>
            <dependency>
                <groupId>org.glassfish.jaxb</groupId>
                <artifactId>jaxb-runtime</artifactId>
                <version>${jaxb.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>UTF-8</encoding>

                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
